reusable button with twMarge and clsx

--- a/src/styles/button.css
+++ b/src/styles/button.css
@@ -1,12 +1,21 @@
 @layer components {
-  .btn {
+  .btn-solid {
     @apply px-4 py-1;
-    @apply rounded-md;
+    @apply font-semibold text-white rounded-md;
+    @apply bg-purple-400 hover:bg-purple-500 focus:bg-purple-500;
+    @apply transition-all;
   }
-  .btn-primary {
-    @apply bg-purple-300;
+  .btn-outline {
+    @apply px-4 py-1;
+    @apply font-semibold text-purple-500 rounded-md;
+    @apply bg-purple-400 bg-opacity-10 hover:bg-opacity-20 focus:bg-opacity-20;
+    @apply border border-purple-400;
+    @apply transition-all;
   }
-  .btn-danger {
-    @apply bg-red-300;
+  .btn-ghost {
+    @apply px-4 py-1;
+    @apply font-semibold text-purple-500 rounded-md;
+    @apply bg-purple-400 bg-opacity-0 hover:bg-opacity-20 focus:bg-opacity-20;
+    @apply transition-all;
   }
 }
